# src/main/java/com/github/muhammadabdurrahman/webcrawler/presentation/model/CrawlAsyncResponse.java
@@ -1,0 +1,19 @@
+package com.github.muhammadabdurrahman.webcrawler.presentation.model;
+
+import java.util.Set;
+import lombok.Builder;
+
+@Builder
+public record CrawlAsyncResponse(
+    String startingUrl,
+    Set<Page> visitedPages
+) {
+
+  public record Page(
+      String pageUrl,
+      Set<String> hyperlinks
+  ) {
+
+  }
+
+}
